# lefis-upload

./: Cargo.toml  LIZENZ.rtf  out.txt  ui.xml
src/: main.rs  ui.rs  wsdl.rs  wsdl_old.rs
wix/: main.wxs
