[package]
name = "LefisUpload"
version = "0.1.0"
edition = "2021"

[dependencies]
azul = { path = "../azul/api/rust" }
serde = "1"
serde_derive = "1"
serde_json = "1"
oracle = { version = "0.5.3", features = ["chrono"] }
reqwest = { version = "0.11.7", default-features = false }
yaserde = "0.7.1"
yaserde_derive = "0.7.1"
log = "0.4.14"
async-trait = "0.1.51"
tokio = { version = "1.14.0", features = ["rt", "macros", "rt-multi-thread"] }
toml = "0.5"
regex = "1.5"
lazy_static = "1.4"
chrono = "0.4.19"
base64 = "0.13.0"
flate2 = "1"